add bootstrap and signup.html, update js and index

--- a/public/index.html
+++ b/public/index.html
@@ -12,24 +12,15 @@
 	</title>
 	<body>
 		<div class="background">
-		<div class="clearfix">
-			<div class="left1">
-				<img src="emilia.jpg" alt: "Emilia">
-				<a href="http://www.twitter.com/ekubokirs" class="public">Twitter</a>
-				<a href="http://www.linkedin.com/profile/view?id=48201147&trk=nav_responsive_tab_profile" class="public">LinkedIn</a>
-			</div>
-			<div id="info" class="right1">
-				<h1 id ="name">Emilia M. Kubo Kirschenbaum</h1>
-				<h2 id="email">emilia.kubokirschenbaum@gmail.com</h2>
-				<h2 id="phone">(310)529-5229</h2>
-				<h2 id="street">2404 John Street</h2>
-					<h2>
-						<span class="address" id="city">Manhattan Beach,</span>
-						<span class="address" id="state">CA</span>
-						<span class="address" id="zip">90266</span>
-					</h2>
-			</div>
-		</div>	
+		<div id="info">
+			<h1 id ="name">Emilia M. Kubo Kirschenbaum</h1>
+			<h2 id="email">emilia.kubokirschenbaum@gmail.com</h2>
+			<h2 id="phone">(310)529-5229</h2>
+			<h2 id="street">2404 John Street</h2>
+			<h2 class="address" id="address">Manhattan Beach,</h2>
+			<a href="http://www.twitter.com/ekubokirs" class="public">Twitter</a>
+			<a href="http://www.linkedin.com/profile/view?id=48201147&trk=nav_responsive_tab_profile" class="public">LinkedIn</a>
+		</div>
 		<div class="clearfix">
 			<div class="left2">
 				<ul class="nav">
@@ -39,66 +30,80 @@
 					</li>
 					<li><a href="#skills">Skills</a>
 					</li>
-					<li><a href="#references">References</a>
-					</li>
+					<!-- <li><a href="#references">References</a>
+					</li> -->
 				</ul>
 			</div>
 			<div id="box" class="right2" class="sub">
 				<div id="experience" class="sub">
-					<h3 class="employer" id="employer1">Employer</h3>
-					<h3 class="position" id="role1"> Position</h3>
-						<div class="clearfix">
-							<h4 id="dates" class="h4">Dates Worked</h4>
-							<h4 id="location" class="h4">Location</h4>
-						</div>
-								<p>Semiotics vinyl roof party, Banksy tofu Echo Park fingerstache fashion axe tote bag selvage wayfarers tousled plaid cornhole. Pickled intelligentsia four loko, blog pour-over narwhal biodiesel Terry Richardson helvetica vegan bicycle rights banjo. Salvia biodiesel Portland, tousled intelligentsia direct trade church-key pop-up Schlitz Bushwick quinoa trust fund +1 beard. Pop-up semiotics kale chips direct trade farm-to-table hella Echo Park. Brunch american apparel twee pitchfork helvetica pour-over, forage pickled small batch chambray jean shorts Williamsburg kogi whatever aesthetic. DIY fingerstache american apparel, Tonx fanny pack cliche letterpress gluten-free organic yr flexitarian aesthetic you probably haven't heard of them pug. VHS Neutra raw denim, readymade hashtag try-hard photo booth scenester.</p>
-					<h3 class="employer" id="employer2">Employer</h3>
-					<h3 class="position" id="role2"> Position</h3>
-						<div class="clearfix">
-							<h4 id="dates" class="h4">Dates Worked</h4>
-							<h4 id="location" class="h4">Location</h4>
-						</div>
-								<p>Flexitarian +1 thundercats, Carles before they sold out occupy lo-fi readymade kale chips. Neutra church-key trust fund, ennui Banksy PBR roof party McSweeney's flannel american apparel Williamsburg cardigan sustainable. Tattooed Brooklyn sriracha, roof party tousled pickled cliche. Salvia swag actually locavore synth. +1 messenger bag next level leggings. 8-bit small batch lo-fi keffiyeh irony beard. Gluten-free asymmetrical authentic, 3 wolf moon tote bag aesthetic Williamsburg bicycle rights meh</p>
 				</div>
 				<div id="education" class="sub">
-					<h3 class="school">Institution</h3>
-					<h3 class="degree"> Position</h3>
+					<!-- <h3 class="school" id="school1">Institution</h3>
+					<h3 class="degree" id="degree1"> Degree</h3>
 						<div class="clearfix">
-							<h4 id="dates" class="h4">Dates Attended</h4>
-							<h4 id="location" class="h4">Location</h4>
+							<h4 class="h4">
+								<span id="sstart1">Start</span>
+								<span>-</span>
+								<span id="send1">End</span>
+							</h4>
+							<h4 id="slocation1" class="h4">Location</h4>
 						</div>
 							<p>Butcher ethical actually locavore flannel, fap iPhone hella messenger bag Marfa dreamcatcher thundercats deep v kogi. Polaroid asymmetrical kitsch, pop-up selfies fixie YOLO 90's. Salvia banjo synth pitchfork, +1 ennui readymade chillwave shoreditch 90's Wes Anderson bicycle rights lomo master cleanse. Occupy semiotics literally, +1 organic synth DIY raw denim lo-fi narwhal Carles locavore. PBR ethical disrupt, lomo Terry Richardson Neutra cornhole thundercats messenger bag sartorial tote bag retro mustache selvage Odd Future. Plaid lo-fi Austin, gluten-free brunch deep v leggings. Vinyl letterpress seitan kogi.</p>
-					<h3 class="school">Institution</h3>
-					<h3 class="degree"> Degree</h3>
+					<h3 class="school" id="school2">Institution</h3>
+					<h3 class="degree" id='degree3'> Degree</h3>
 						<div class="clearfix">
-							<h4 id="dates" class="h4">Dates Worked</h4>
-							<h4 id="location" class="h4">Location</h4>
+							<h4 class="h4">
+								<span id="sstart2">Start</span>
+								<span>-</span>
+								<span id="send2">End</span>
+							</h4>
+							<h4 id="slocation2" class="h4">Location</h4>
 						</div>
 							<p>Organic keytar butcher Williamsburg tattooed, chambray Pinterest High Life skateboard asymmetrical next level. Kale chips freegan iPhone pug, DIY mixtape vinyl bespoke. Salvia 8-bit iPhone wayfarers intelligentsia disrupt. Mumblecore fap fingerstache, polaroid Wes Anderson YOLO craft beer post-ironic four loko. Odd Future Williamsburg swag kale chips farm-to-table biodiesel, ethnic next level pour-over Austin small batch fingerstache before they sold out. Flexitarian Godard umami flannel kogi fap. Tote bag ethnic authentic seitan, small batch art party put a bird on it tousled.</p>
-					<h3 class="school">Institution</h3>
-					<h3 class="degree"> Degree</h3>
+					<h3 class="school" id="school3">Institution</h3>
+					<h3 class="degree" id='degree3'> Degree</h3>
 						<div class="clearfix">
-							<h4 id="dates" class="h4">Dates Worked</h4>
-							<h4 id="location" class="h4">Location</h4>
+							<h4 class="h4">
+								<span id="sstart3">Start</span>
+								<span>-</span>
+								<span id="send3">End</span>
+							</h4>
+							<h4 id="slocation3" class="h4">Location</h4>
 						</div>
-							<p>Organic keytar butcher Williamsburg tattooed, chambray Pinterest High Life skateboard asymmetrical next level. Kale chips freegan iPhone pug, DIY mixtape vinyl bespoke. Salvia 8-bit iPhone wayfarers intelligentsia disrupt. Mumblecore fap fingerstache, polaroid Wes Anderson YOLO craft beer post-ironic four loko. Odd Future Williamsburg swag kale chips farm-to-table biodiesel, ethnic next level pour-over Austin small batch fingerstache before they sold out. Flexitarian Godard umami flannel kogi fap. Tote bag ethnic authentic seitan, small batch art party put a bird on it tousled.</p>
+							<p>Organic keytar butcher Williamsburg tattooed, chambray Pinterest High Life skateboard asymmetrical next level. Kale chips freegan iPhone pug, DIY mixtape vinyl bespoke. Salvia 8-bit iPhone wayfarers intelligentsia disrupt. Mumblecore fap fingerstache, polaroid Wes Anderson YOLO craft beer post-ironic four loko. Odd Future Williamsburg swag kale chips farm-to-table biodiesel, ethnic next level pour-over Austin small batch fingerstache before they sold out. Flexitarian Godard umami flannel kogi fap. Tote bag ethnic authentic seitan, small batch art party put a bird on it tousled.</p> -->
 				</div>
 				<div id="skills" class="sub">
-					<ul class="certs">
-						<li>Certifications
+					<!-- <ul class="certs">
+						<li id="skill1">Certifications
 							<ul>
-								<li>Red Cross Lifeguard</li>
-								<li>Red Cross CPR/AED</li>
+								<li>
+									<span>Experience:</span>
+									<span id:'experience1'>Red Cross Lifeguard</span>
+								</li>
+								<li id='title1'>Red Cross CPR/AED</li>
 							</ul>
 						</li>
-						<li>Other
+						<li id='skill2'>Program
 							<ul>
-								<li>Making Pancakes</li>
-								<li>Knitting</li>
+								<li>
+									<span>Experience:</span>
+									<span id:'experience2'>Red Cross Lifeguard</span>
+								</li>
+								<li id='title2'>Red Cross CPR/AED</li>
+							</ul>
 						</li>
-					</ul>
+						<li id='skill3'>Other
+							<ul>
+								<li>
+									<span>Experience:</span>
+									<span id:'experience3'>Red Cross Lifeguard</span>
+								</li>
+								<li id='title3'>Red Cross CPR/AED</li>
+							</ul>
+						</li>
+					</ul> -->
 				</div>
-				<div id="references" class="sub">
+				<!-- <div id="references" class="sub">
 					<table border="1" class="table">
 						<tr>
 							<th>Name</th>
@@ -113,7 +118,7 @@
 							<td>swimming@thepool.com</td>
 						</tr>
 					</table>
-				</div>
+				</div> -->
 			</div>
 		<div class="clearfix">
 			<div class="left3">
@@ -128,6 +133,7 @@
 					<input type="checkbox" name="response" value="Keep">Keep On File<br>
 					<input type="checkbox" name="response" value="HellNo">DO NOT HIRE<br> 
 				</form>
+				<button type="submit" class='btn'>Save</button>
 			</div>
 			<div class="right3">
 				<a href="previous.html">Previous</a>
