--- a/public/signup.html
+++ b/public/signup.html
@@ -7,6 +7,7 @@
 
 		<script type="text/javascript" src="js/jquery.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
+		<script type="text/javescript" src="js/signup."></script>
 	</head>
 	<body>
 		<form class="form-horizontal" id='userDataForm'>
@@ -15,61 +16,61 @@
 					<div class="control-group">
 						<label for="firstName" class="control-label">First Name</label>
 							<div class="controls">
-								<input id="firstName" type="text" placeholder="e.g. John"/>
+								<input class="firstName" type="text" placeholder="e.g. John"/>
 							</div>
 					</div>
 					<div class="control-group">
 						<label for="lastName" class='control-label'>Last Name</label>
 							<div class="controls">
-								<input id="lastName" type="text" placeholder="e.g. Smith"/>
+								<input class="lastName" type="text" placeholder="e.g. Smith"/>
 							</div>
 					</div>
 					<div class="control-group">
 						<label for="email" class='control-label'>E-mail Address</label>
 							<div class="controls">
-								<input id="email" type="text" placeholder="johnsmith@gmail.com"/>
+								<input class="email" type="text" placeholder="johnsmith@gmail.com"/>
 							</div>
 					</div>
 					<div class="control-group">
 						<label for="phone" class='control-label'>Phone</label>
 							<div class="controls">
-								<input id="phone" type="text" placeholder="e.g. (123)456-7890"/>
+								<input class="phone" type="text" placeholder="e.g. (123)456-7890"/>
 							</div>
 					</div>
 					<div class="control-group">
 						<label for="street" class='control-label'>Street Address</label>
 							<div class="controls">
-								<input id="street" type="text" placeholder="e.g. 1234 Glitter Road"/>
+								<input class="street" type="text" placeholder="e.g. 1234 Glitter Road"/>
 							</div>
 					</div>
 					<div class="control-group">
 						<label for="city" class='control-label'>City</label>
 							<div class="controls">
-								<input id="city" type="text" placeholder="e.g. Andryushchenko"/>
+								<input class="city" type="text" placeholder="e.g. Andryushchenko"/>
 							</div>
 					</div>
 					<div class="control-group">
 						<label for="state" class='control-label'>State</label>
 							<div class="controls">
-								<input id="state" type="text" placeholder="e.g. CA"/>
+								<input class="state" type="text" placeholder="e.g. CA"/>
 							</div>
 					</div>
 					<div class="control-group">
 						<label for="zipcode" class='control-label'>Zip Code</label>
 							<div class="controls">
-								<input id="zipcode" type="text" placeholder="e.g. 90210"/>
+								<input class="zipcode" type="text" placeholder="e.g. 90210"/>
 							</div>
 					</div>
 					<div class="control-group">
 						<label for="twitter" class='control-label'>Twitter</label>
 							<div class="controls">
-								<input id="twitter" type="text" placeholder="e.g. @becks21"/>
+								<input class="twitter" type="text" placeholder="e.g. @becks21"/>
 							</div>
 					</div>
 					<div class="control-group">
 						<label for="linkedin" class='control-label'>Zip Code</label>
 							<div class="controls">
-								<input id="linkedin" type="text" placeholder="e.g. beckaw"/>
+								<input class="linkedin" type="text" placeholder="e.g. beckaw"/>
 							</div>
 					</div>
 			</fieldset>
@@ -79,43 +80,43 @@
 						<div class="control-group">
 							<label for="organization" class="control-label">Organization</label>
 								<div class="controls">
-									<input id="organization" type="text" placeholder="e.g. BBB"/>
+									<input class="organization" type="text" placeholder="e.g. BBB"/>
 								</div>
 						</div>
 						<div class="control-group">
 							<label for="position" class='control-label'>Position</label>
 								<div class="controls">
-									<input id="position" type="text" placeholder="e.g. Teacher"/>
+									<input class="position" type="text" placeholder="e.g. Teacher"/>
 								</div>
 						</div>
 						<div class="control-group">
 							<label for="startdate" class='control-label'>Start Date</label>
 								<div class="controls">
-									<input id="startdate" type="date" placeholder=""/>
+									<input class="startdate" type="date" placeholder=""/>
 								</div>
 						</div>
 						<div class="control-group">
 							<label for="enddate" class='control-label'>End Date</label>
 								<div class="controls">
-									<input id="enddate" type="date" placeholder=""/>
+									<input class="enddate" type="date" placeholder=""/>
 								</div>
 						</div>
 						<div class="control-group">
 							<label for="location" class='control-label'>Location</label>
 								<div class="controls">
-									<input id="location" type="text" placeholder="e.g. Beverly Hills"/>
+									<input class="location" type="text" placeholder="e.g. Beverly Hills"/>
 								</div>
 						</div>
 						<div class="control-group">
 							<label for="project" class='control-label'>Project</label>
 								<div class="controls">
-									<input id="project" type="text" placeholder="e.g. Sheep Herding"/>
+									<input class="project" type="text" placeholder="e.g. Sheep Herding"/>
 								</div>
 						</div>
 						<div class="control-group">
 							<label for="responsibilites" class='control-label'>Responsibilites</label>
 								<div class="controls">
-									<input id="responsibilies" type="text" placeholder="e.g. Instagramming Dinner"/>
+									<input class="responsibilies" type="text" placeholder="e.g. Instagramming Dinner"/>
 								</div>
 						</div>
 						<hr>
@@ -132,43 +133,43 @@
 						<div class="control-group">
 							<label for="school" class="control-label">Institution</label>
 								<div class="controls">
-									<input id="school_id" type="text" placeholder="e.g. Harvard"/>
+									<input class="school_id" type="text" placeholder="e.g. Harvard"/>
 								</div>
 						</div>
 						<div class="control-group">
 							<label for="degree" class='control-label'>Degree</label>
 								<div class="controls">
-									<input id="degree" type="text" placeholder="e.g. Masters"/>
+									<input class="degree" type="text" placeholder="e.g. Masters"/>
 								</div>
 						</div>
 						<div class="control-group">
 							<label for="startdate" class='control-label'>Start Date</label>
 								<div class="controls">
-									<input id="startdate" type="date" placeholder=""/>
+									<input class="startdate" type="date" placeholder=""/>
 								</div>
 						</div>
 						<div class="control-group">
 							<label for="enddate" class='control-label'>End Date</label>
 								<div class="controls">
-									<input id="enddate" type="date" placeholder=""/>
+									<input class="enddate" type="date" placeholder=""/>
 								</div>
 						</div>
 						<div class="control-group">
 							<label for="location" class='control-label'>Location</label>
 								<div class="controls">
-									<input id="location" type="text" placeholder="e.g. Jupiter"/>
+									<input class="location" type="text" placeholder="e.g. Jupiter"/>
 								</div>
 						</div>
 						<div class="control-group">
 							<label for="major" class='control-label'>Major</label>
 								<div class="controls">
-									<input id="major" type="text" placeholder="e.g. Clog Dancing"/>
+									<input class="major" type="text" placeholder="e.g. Clog Dancing"/>
 								</div>
 						</div>
 						<div class="control-group">
 							<label for="minor" class='control-label'>Minor</label>
 								<div class="controls">
-									<input id="minor" type="text" placeholder="e.g. Cloning"/>
+									<input class="minor" type="text" placeholder="e.g. Cloning"/>
 								</div>
 						</div>
 						<hr>
@@ -185,7 +186,7 @@
 						<div class="control-group">
 							<label for="category" class="control-label">Category</label>
 								<div class="controls">
-									<input id="category" type="text" placeholder="e.g. Helpful"/>
+									<input class="category" type="text" placeholder="e.g. Helpful"/>
 								</div>
 						</div>
 						<div class="control-group">
@@ -202,7 +203,7 @@
 						<div class="control-group">
 							<label for="title" class='control-label'>Title</label>
 								<div class="controls">
-									<input id="title" type="text" placeholder="e.g. lifesaving"/>
+									<input class="title" type="text" placeholder="e.g. lifesaving"/>
 								</div>
 						</div>
 						<hr>
