--- a/public/signup.html
+++ b/public/signup.html
@@ -7,7 +7,6 @@
 
 		<script type="text/javascript" src="js/jquery.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
-		<script type="text/javescript" src="js/signup."></script>
 	</head>
 	<body>
 		<form class="form-horizontal" id='userDataForm'>
@@ -92,13 +91,13 @@
 						<div class="control-group">
 							<label for="startdate" class='control-label'>Start Date</label>
 								<div class="controls">
-									<input class="startdate" type="date" placeholder=""/>
+									<input class="startdate" type="month" placeholder=""/>
 								</div>
 						</div>
 						<div class="control-group">
 							<label for="enddate" class='control-label'>End Date</label>
 								<div class="controls">
-									<input class="enddate" type="date" placeholder=""/>
+									<input class="enddate" type="month" placeholder=""/>
 								</div>
 						</div>
 						<div class="control-group">
@@ -145,13 +144,13 @@
 						<div class="control-group">
 							<label for="startdate" class='control-label'>Start Date</label>
 								<div class="controls">
-									<input class="startdate" type="date" placeholder=""/>
+									<input class="startdate" type="month" placeholder=""/>
 								</div>
 						</div>
 						<div class="control-group">
 							<label for="enddate" class='control-label'>End Date</label>
 								<div class="controls">
-									<input class="enddate" type="date" placeholder=""/>
+									<input class="enddate" type="month" placeholder=""/>
 								</div>
 						</div>
 						<div class="control-group">
@@ -190,8 +189,8 @@
 								</div>
 						</div>
 						<div class="control-group">
-							<label for="experiences" class='control-label'>Years of Experience</label>
-								<div class="controls">
+							<label for="experience" class='control-label'>Years of Experience</label>
+								<div  class='experience' class="controls">
 									<select>
 										<option>0-2</option>
 										<option>3-5</option>
