changed json input

--- a/public/signup.html
+++ b/public/signup.html
@@ -190,13 +190,8 @@
 						</div>
 						<div class="control-group">
 							<label for="experience" class='control-label'>Years of Experience</label>
-								<div  class='experience' class="controls">
-									<select>
-										<option>0-2</option>
-										<option>3-5</option>
-										<option>6-8</option>
-										<option>9 or more</option>
-									</select>
+								<div class="controls">
+									<input class="experience" type="number" placeholder=""/>
 								</div>
 						</div>
 						<div class="control-group">
