--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 	<head>	
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
+		<link href='http://fonts.googleapis.com/css?family=Lato|Oswald|Audiowide' rel='stylesheet' type='text/css'>
 
 		<script type="text/javascript" src="js/jquery.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
@@ -12,34 +13,37 @@
 	</title>
 	<body>
 		<div class="background">
+		<div class="topnav">
+			<ul>
+				<li><a href=previous.html>Previous</a></li>
+				<li><a href=next.html>Next</a></li>
+			<ul>
 		<div id="info">
 			<h1 id ="name">Emilia M. Kubo Kirschenbaum</h1>
 			<h2 id="email">emilia.kubokirschenbaum@gmail.com</h2>
 			<h2 id="phone">(310)529-5229</h2>
 			<h2 id="street">2404 John Street</h2>
 			<h2 class="address" id="address">Manhattan Beach,</h2>
-			<a href="http://www.twitter.com/ekubokirs" class="public">Twitter</a>
-			<a href="http://www.linkedin.com/profile/view?id=48201147&trk=nav_responsive_tab_profile" class="public">LinkedIn</a>
+			<a id="twitter" href="http://www.twitter.com/ekubokirs" class="public">Twitter</a>
+			<a id="website" href="http://www.facebook.com" class="public">Link</a>
 		</div>
 		<div class="clearfix">
 			<div class="left2">
 				<ul class="nav">
-					<li><a href="#experience">Experience</a>
-					</li>
-					<li><a href="#education">Education</a>
-					</li>
-					<li><a href="#skills">Skills</a>
-					</li>
+					<li><a href="#experience">Experience</a></li>
+					<li><a href="#education">Education</a></li>
+					<li><a href="#skills">Skills</a></li>
 				</ul>
 			</div>
 			<div id="box" class="right2" class="sub">
 				<div id="experience" class="sub">
 				</div>
-				<div id="education" class="sub">
+				<div id="educationHolder" class="sub">
 				</div>
 				<div id="skills" class="sub">
 				</div>
 			</div>
+		</div>
 		<div class="clearfix">
 			<div class="left3">
 				<h2>Notes:</h2>
@@ -55,11 +59,6 @@
 				</form>
 				<button type="submit" class='btn'>Save</button>
 			</div>
-			<div class="right3">
-				<a href="previous.html">Previous</a>
-				<a href="next.html">Next</a>
-			</div>
-		</div>
 		</div>
 	</body>
 </html>
