updated signup, and js

--- a/public/index.html
+++ b/public/index.html
@@ -13,51 +13,59 @@
 	</title>
 	<body>
 		<div class="background">
-		<div class="topnav">
-			<ul>
-				<li><a href=previous.html>Previous</a></li>
-				<li><a href=next.html>Next</a></li>
-			<ul>
-		<div id="info">
-			<h1 id ="name">Emilia M. Kubo Kirschenbaum</h1>
-			<h2 id="email">emilia.kubokirschenbaum@gmail.com</h2>
-			<h2 id="phone">(310)529-5229</h2>
-			<h2 id="street">2404 John Street</h2>
-			<h2 class="address" id="address">Manhattan Beach,</h2>
-			<a id="twitter" href="http://www.twitter.com/ekubokirs" class="public">Twitter</a>
-			<a id="website" href="http://www.facebook.com" class="public">Link</a>
-		</div>
-		<div class="clearfix">
-			<div class="left2">
-				<ul class="nav">
-					<li><a href="#experience">Experience</a></li>
-					<li><a href="#education">Education</a></li>
-					<li><a href="#skills">Skills</a></li>
-				</ul>
+			<div class='clearfix'>
+				<ul class="topnav">
+					<li><a href=previous.html>Previous</a></li>
+					<li><a href=next.html>Next</a></li>
+				<ul>
 			</div>
-			<div id="box" class="right2" class="sub">
-				<div id="experience" class="sub">
+			<div id="info">
+				<h1 id ="name">Emilia M. Kubo Kirschenbaum</h1>
+				<h2 id="email">emilia.kubokirschenbaum@gmail.com</h2>
+				<h2 id="phone">(310)529-5229</h2>
+				<h2 id="street">2404 John Street</h2>
+				<h2 class="address" id="address">Manhattan Beach,</h2>
+				<a id="twitter" href="http://www.twitter.com/ekubokirs" class="public">Twitter</a>
+				<a id="website" href="http://www.facebook.com" class="public">Link</a>
+			</div>
+			<div class="clearfix">
+				<div class="left2">
+					<ul class="nav">
+						<li><a href="#experienceHolder">Experience</a></li>
+						<li><a href="#educationHolder">Education</a></li>
+						<li><a href="#skillsHolder">Skills</a></li>
+					</ul>
 				</div>
-				<div id="educationHolder" class="sub">
-				</div>
-				<div id="skills" class="sub">
+				<div id="box" class="right2" class="sub">
+					<div id="experienceHolder" class="sub">
+					</div>
+					<div id="educationHolder" class="sub">
+					</div>
+					<div id="skillsHolder" class="sub">
+					</div>
 				</div>
 			</div>
-		</div>
-		<div class="clearfix">
-			<div class="left3">
-				<h2>Notes:</h2>
-				<textarea>
-				</textarea>
-			</div>
-			<div class="middle">
-				<form class="interview">
-					<input type="checkbox" name="response" value="Interview">Interview<br>
-					<input type="checkbox" name="response" value="No">No<br>
-					<input type="checkbox" name="response" value="Keep">Keep On File<br>
-					<input type="checkbox" name="response" value="HellNo">DO NOT HIRE<br> 
-				</form>
-				<button type="submit" class='btn'>Save</button>
+			<div class="clearfix">
+				<div class="left3">
+					<h2>Notes:</h2>
+					<textarea>
+					</textarea>
+				</div>
+				<div class="middle">
+					<form class="interview">
+						<input type="checkbox" name="response" value="Interview">Interview<br>
+						<input type="checkbox" name="response" value="No">No<br>
+						<input type="checkbox" name="response" value="Keep">Keep On File<br>
+						<input type="checkbox" name="response" value="HellNo">DO NOT HIRE<br> 
+					</form>
+					<button type="submit" class='btn'>Save</button>
+				</div>
+				<div class='right3'>
+					<ul class='navoptions'>
+						<li><a href='signup.html'>New</a></li>
+						<li><a class='delete' href='#'>Delete</a></li>
+					</ul>
+				</div>
 			</div>
 		</div>
 	</body>
