--- a/public/signup.html
+++ b/public/signup.html
@@ -67,7 +67,7 @@
 							</div>
 					</div>
 					<div class="control-group">
-						<label for="linkedin" class='control-label'>Zip Code</label>
+						<label for="linkedin" class='control-label'>LinkedIn Username</label>
 							<div class="controls">
 								<input class="linkedin" type="text" placeholder="e.g. beckaw"/>
 							</div>
@@ -208,7 +208,7 @@
 					</a>
 				</span>
 			</fieldset>
-			<button type="submit" class='btn'>Save &amp; Continue</button>
+			<button type="submit" class='btn' class='submit'>Save &amp; Continue</button>
 		</form>
 	</body>
 </html>
