--- a/public/signup.html
+++ b/public/signup.html
@@ -2,213 +2,215 @@
 <html lang="en">
 	<head>	
 		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/bootstrap.css">
+		<link rel="stylesheet" href="css/signup.css">
 
 		<script type="text/javascript" src="js/jquery.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
 	</head>
 	<body>
-		<form class="form-horizontal" id='userDataForm'>
-			<fieldset>
-				<legend>Background Information</legend>
-					<div class="control-group">
-						<label for="firstName" class="control-label">First Name</label>
-							<div class="controls">
-								<input class="firstName" type="text" placeholder="e.g. John"/>
+		<div class='background'>
+			<form class="form-horizontal" id='userDataForm'>
+				<fieldset>
+					<legend>Background Information</legend>
+						<div class="control-group">
+							<label for="firstName" class="control-label">First Name</label>
+								<div class="controls">
+									<input class="firstName" type="text" placeholder="e.g. John"/>
+								</div>
+						</div>
+						<div class="control-group">
+							<label for="lastName" class='control-label'>Last Name</label>
+								<div class="controls">
+									<input class="lastName" type="text" placeholder="e.g. Smith"/>
+								</div>
+						</div>
+						<div class="control-group">
+							<label for="email" class='control-label'>E-mail Address</label>
+								<div class="controls">
+									<input class="email" type="text" placeholder="johnsmith@gmail.com"/>
+								</div>
+						</div>
+						<div class="control-group">
+							<label for="phone" class='control-label'>Phone</label>
+								<div class="controls">
+									<input class="phone" type="text" placeholder="e.g. (123)456-7890"/>
+								</div>
+						</div>
+						<div class="control-group">
+							<label for="street" class='control-label'>Street Address</label>
+								<div class="controls">
+									<input class="street" type="text" placeholder="e.g. 1234 Glitter Road"/>
+								</div>
+						</div>
+						<div class="control-group">
+							<label for="city" class='control-label'>City</label>
+								<div class="controls">
+									<input class="city" type="text" placeholder="e.g. Andryushchenko"/>
+								</div>
+						</div>
+						<div class="control-group">
+							<label for="state" class='control-label'>State</label>
+								<div class="controls">
+									<input class="state" type="text" placeholder="e.g. CA"/>
+								</div>
+						</div>
+						<div class="control-group">
+							<label for="zipcode" class='control-label'>Zip Code</label>
+								<div class="controls">
+									<input class="zipcode" type="text" placeholder="e.g. 90210"/>
+								</div>
+						</div>
+						<div class="control-group">
+							<label for="twitter" class='control-label'>Twitter</label>
+								<div class="controls">
+									<input class="twitter" type="text" placeholder="e.g. @becks21"/>
+								</div>
+						</div>
+						<div class="control-group">
+							<label for="linkedin" class='control-label'>LinkedIn Username</label>
+								<div class="controls">
+									<input class="linkedin" type="text" placeholder="e.g. beckaw"/>
+								</div>
+						</div>
+				</fieldset>
+				<fieldset>
+					<legend>Experience</legend>
+						<div class="experience_block">
+							<div class="control-group">
+								<label for="organization" class="control-label">Organization</label>
+									<div class="controls">
+										<input class="organization" type="text" placeholder="e.g. BBB"/>
+									</div>
 							</div>
-					</div>
-					<div class="control-group">
-						<label for="lastName" class='control-label'>Last Name</label>
-							<div class="controls">
-								<input class="lastName" type="text" placeholder="e.g. Smith"/>
+							<div class="control-group">
+								<label for="position" class='control-label'>Position</label>
+									<div class="controls">
+										<input class="position" type="text" placeholder="e.g. Teacher"/>
+									</div>
 							</div>
-					</div>
-					<div class="control-group">
-						<label for="email" class='control-label'>E-mail Address</label>
-							<div class="controls">
-								<input class="email" type="text" placeholder="johnsmith@gmail.com"/>
+							<div class="control-group">
+								<label for="startdate" class='control-label'>Start Date</label>
+									<div class="controls">
+										<input class="startdate" type="month" placeholder=""/>
+									</div>
 							</div>
-					</div>
-					<div class="control-group">
-						<label for="phone" class='control-label'>Phone</label>
-							<div class="controls">
-								<input class="phone" type="text" placeholder="e.g. (123)456-7890"/>
+							<div class="control-group">
+								<label for="enddate" class='control-label'>End Date</label>
+									<div class="controls">
+										<input class="enddate" type="month" placeholder=""/>
+									</div>
 							</div>
-					</div>
-					<div class="control-group">
-						<label for="street" class='control-label'>Street Address</label>
-							<div class="controls">
-								<input class="street" type="text" placeholder="e.g. 1234 Glitter Road"/>
+							<div class="control-group">
+								<label for="location" class='control-label'>Location</label>
+									<div class="controls">
+										<input class="location" type="text" placeholder="e.g. Beverly Hills"/>
+									</div>
 							</div>
-					</div>
-					<div class="control-group">
-						<label for="city" class='control-label'>City</label>
-							<div class="controls">
-								<input class="city" type="text" placeholder="e.g. Andryushchenko"/>
+							<div class="control-group">
+								<label for="project" class='control-label'>Project</label>
+									<div class="controls">
+										<input class="project" type="text" placeholder="e.g. Sheep Herding"/>
+									</div>
 							</div>
-					</div>
-					<div class="control-group">
-						<label for="state" class='control-label'>State</label>
-							<div class="controls">
-								<input class="state" type="text" placeholder="e.g. CA"/>
+							<div class="control-group">
+								<label for="responsibilites" class='control-label'>Responsibilites</label>
+									<div class="controls">
+										<input class="responsibilies" type="text" placeholder="e.g. Instagramming Dinner"/>
+									</div>
 							</div>
-					</div>
-					<div class="control-group">
-						<label for="zipcode" class='control-label'>Zip Code</label>
-							<div class="controls">
-								<input class="zipcode" type="text" placeholder="e.g. 90210"/>
-							</div>
-					</div>
-					<div class="control-group">
-						<label for="twitter" class='control-label'>Twitter</label>
-							<div class="controls">
-								<input class="twitter" type="text" placeholder="e.g. @becks21"/>
-							</div>
-					</div>
-					<div class="control-group">
-						<label for="linkedin" class='control-label'>LinkedIn Username</label>
-							<div class="controls">
-								<input class="linkedin" type="text" placeholder="e.g. beckaw"/>
-							</div>
-					</div>
-			</fieldset>
-			<fieldset>
-				<legend>Experience</legend>
-					<div class="experience_block">
-						<div class="control-group">
-							<label for="organization" class="control-label">Organization</label>
-								<div class="controls">
-									<input class="organization" type="text" placeholder="e.g. BBB"/>
-								</div>
+							<hr>
 						</div>
-						<div class="control-group">
-							<label for="position" class='control-label'>Position</label>
-								<div class="controls">
-									<input class="position" type="text" placeholder="e.g. Teacher"/>
-								</div>
-						</div>
-						<div class="control-group">
-							<label for="startdate" class='control-label'>Start Date</label>
-								<div class="controls">
-									<input class="startdate" type="month" placeholder=""/>
-								</div>
-						</div>
-						<div class="control-group">
-							<label for="enddate" class='control-label'>End Date</label>
-								<div class="controls">
-									<input class="enddate" type="month" placeholder=""/>
-								</div>
-						</div>
-						<div class="control-group">
-							<label for="location" class='control-label'>Location</label>
-								<div class="controls">
-									<input class="location" type="text" placeholder="e.g. Beverly Hills"/>
-								</div>
-						</div>
-						<div class="control-group">
-							<label for="project" class='control-label'>Project</label>
-								<div class="controls">
-									<input class="project" type="text" placeholder="e.g. Sheep Herding"/>
-								</div>
-						</div>
-						<div class="control-group">
-							<label for="responsibilites" class='control-label'>Responsibilites</label>
-								<div class="controls">
-									<input class="responsibilies" type="text" placeholder="e.g. Instagramming Dinner"/>
-								</div>
-						</div>
-						<hr>
-					</div>
-				<span class="help-block">
-					<a href="#" class="experience_block_add">
-						+ Add Experience
-					</a>
-				</span>
-			</fieldset>
-			<fieldset>
-				<legend>Education</legend>
-					<div class="education_block">
-						<div class="control-group">
-							<label for="school" class="control-label">Institution</label>
-								<div class="controls">
-									<input class="school_id" type="text" placeholder="e.g. Harvard"/>
-								</div>
-						</div>
-						<div class="control-group">
-							<label for="degree" class='control-label'>Degree</label>
-								<div class="controls">
-									<input class="degree" type="text" placeholder="e.g. Masters"/>
-								</div>
-						</div>
-						<div class="control-group">
-							<label for="startdate" class='control-label'>Start Date</label>
-								<div class="controls">
-									<input class="startdate" type="month" placeholder=""/>
-								</div>
-						</div>
-						<div class="control-group">
-							<label for="enddate" class='control-label'>End Date</label>
-								<div class="controls">
-									<input class="enddate" type="month" placeholder=""/>
-								</div>
-						</div>
-						<div class="control-group">
-							<label for="location" class='control-label'>Location</label>
-								<div class="controls">
-									<input class="location" type="text" placeholder="e.g. Jupiter"/>
-								</div>
-						</div>
-						<div class="control-group">
-							<label for="major" class='control-label'>Major</label>
-								<div class="controls">
-									<input class="major" type="text" placeholder="e.g. Clog Dancing"/>
-								</div>
-						</div>
-						<div class="control-group">
-							<label for="minor" class='control-label'>Minor</label>
-								<div class="controls">
-									<input class="minor" type="text" placeholder="e.g. Cloning"/>
-								</div>
-						</div>
-						<hr>
-					</div>
 					<span class="help-block">
-						<a href="#" class="education_block_add">
-							+ Add Education
+						<a href="#" class="experience_block_add">
+							+ Add Experience
 						</a>
-				</span>
-			</fieldset>
-			<fieldset>
-				<legend>Skills</legend>
-					<div class="skill_block">
-						<div class="control-group">
-							<label for="category" class="control-label">Category</label>
-								<div class="controls">
-									<input class="category" type="text" placeholder="e.g. Helpful"/>
-								</div>
+					</span>
+				</fieldset>
+				<fieldset>
+					<legend>Education</legend>
+						<div class="education_block">
+							<div class="control-group">
+								<label for="school" class="control-label">Institution</label>
+									<div class="controls">
+										<input class="school_id" type="text" placeholder="e.g. Harvard"/>
+									</div>
+							</div>
+							<div class="control-group">
+								<label for="degree" class='control-label'>Degree</label>
+									<div class="controls">
+										<input class="degree" type="text" placeholder="e.g. Masters"/>
+									</div>
+							</div>
+							<div class="control-group">
+								<label for="startdate" class='control-label'>Start Date</label>
+									<div class="controls">
+										<input class="startdate" type="month" placeholder=""/>
+									</div>
+							</div>
+							<div class="control-group">
+								<label for="enddate" class='control-label'>End Date</label>
+									<div class="controls">
+										<input class="enddate" type="month" placeholder=""/>
+									</div>
+							</div>
+							<div class="control-group">
+								<label for="location" class='control-label'>Location</label>
+									<div class="controls">
+										<input class="location" type="text" placeholder="e.g. Jupiter"/>
+									</div>
+							</div>
+							<div class="control-group">
+								<label for="major" class='control-label'>Major</label>
+									<div class="controls">
+										<input class="major" type="text" placeholder="e.g. Clog Dancing"/>
+									</div>
+							</div>
+							<div class="control-group">
+								<label for="minor" class='control-label'>Minor</label>
+									<div class="controls">
+										<input class="minor" type="text" placeholder="e.g. Cloning"/>
+									</div>
+							</div>
+							<hr>
 						</div>
-						<div class="control-group">
-							<label for="experience" class='control-label'>Years of Experience</label>
-								<div class="controls">
-									<input class="experience" type="number" placeholder=""/>
-								</div>
+						<span class="help-block">
+							<a href="#" class="education_block_add">
+								+ Add Education
+							</a>
+					</span>
+				</fieldset>
+				<fieldset>
+					<legend>Skills</legend>
+						<div class="skill_block">
+							<div class="control-group">
+								<label for="category" class="control-label">Category</label>
+									<div class="controls">
+										<input class="category" type="text" placeholder="e.g. Helpful"/>
+									</div>
+							</div>
+							<div class="control-group">
+								<label for="experience" class='control-label'>Years of Experience</label>
+									<div class="controls">
+										<input class="experience" type="number" placeholder=""/>
+									</div>
+							</div>
+							<div class="control-group">
+								<label for="title" class='control-label'>Title</label>
+									<div class="controls">
+										<input class="title" type="text" placeholder="e.g. lifesaving"/>
+									</div>
+							</div>
+							<hr>
 						</div>
-						<div class="control-group">
-							<label for="title" class='control-label'>Title</label>
-								<div class="controls">
-									<input class="title" type="text" placeholder="e.g. lifesaving"/>
-								</div>
-						</div>
-						<hr>
-					</div>
-				<span class="help-block" >
-					<a href="#" class="skill_block_add">
-						+ Add Skills
-					</a>
-				</span>
-			</fieldset>
-			<button type="submit" class='btn' class='submit'>Save &amp; Continue</button>
-		</form>
+					<span class="help-block" >
+						<a href="#" class="skill_block_add">
+							+ Add Skills
+						</a>
+					</span>
+				</fieldset>
+				<button type="submit" class='btn' class='submit'>Save &amp; Continue</button>
+			</form>
+		</div>
 	</body>
 </html>
