update js attempt previous button

--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
 		<div class="background">
 			<div class='clearfix'>
 				<ul class="topnav">
-					<li><a href=previous.html>Previous</a></li>
-					<li><a href=next.html>Next</a></li>
+					<li><a class='previous' href='#'>Previous</a></li>
+					<li><a  class='next' href='#'>Next</a></li>
 				<ul>
 			</div>
 			<div id="info">
