--- a/public/signup.html
+++ b/public/signup.html
@@ -9,6 +9,7 @@
 		<script type="text/javascript" src="js/main.js"></script>
 	</head>
 	<body>
+		<title>Sign Up</title>
 		<div class='background'>
 			<form class="form-horizontal" id='userDataForm'>
 				<fieldset>
@@ -71,6 +72,12 @@
 							<label for="linkedin" class='control-label'>LinkedIn Username</label>
 								<div class="controls">
 									<input class="linkedin" type="text" placeholder="e.g. beckaw"/>
+								</div>
+						</div>
+						<div class="control-group">
+							<label for="website" class='control-label'>Website Address</label>
+								<div class="controls">
+									<input class="website" type="text" placeholder="e.g. www.beckaw.com"/>
 								</div>
 						</div>
 				</fieldset>
