--- a/public/signup.html
+++ b/public/signup.html
@@ -179,6 +179,12 @@
 										<input class="minor" type="text" placeholder="e.g. Cloning"/>
 									</div>
 							</div>
+							<div class="control-group">
+								<label for="gpa" class='control-label'>GPA</label>
+									<div class="controls">
+										<input class="gpa" type="text" placeholder="e.g. 4.0"/>
+									</div>
+							</div>
 							<hr>
 						</div>
 						<span class="help-block">
